--- a/public/stylesheets/css/main.css
+++ b/public/stylesheets/css/main.css
@@ -3,7 +3,7 @@
 /* Colors */
 /* Mixins */
 /* ------ */
-/* General styles */
+/* Global Styles */
 /* -------------- */
 html {
   height: 100%; }
@@ -30,17 +30,23 @@ a:hover {
   border-radius: 5px;
   background: #0b2c3c; }
 
+@media screen and (min-width: 992px) {
+  .row {
+    height: 100%; } }
 .main-wrapper {
   width: 100%;
-  height: 100%; }
+  height: 100%;
+  padding: 0 15px; }
 
-/* Specific styles */
+.padLeft {
+  font-family: "kavoon", sans-serif;
+  padding-left: 50px; }
+
+/* Selected Styles */
 /* --------------- */
 .first {
-  width: 27%;
   height: 100%;
   opacity: 0.92;
-  float: left;
   background: #e74c3c;
   -webkit-transition: 0.2s;
   -moz-transition: 0.2s;
@@ -48,10 +54,9 @@ a:hover {
   transition: 0.2s;
   font-family: "kavoon", sans-serif; }
   .first .github {
-    position: absolute;
-    top: 10px;
-    left: 100px;
-    font-size: 10px; }
+    font-size: 10px;
+    right: 0px;
+    margin-left: 104px; }
   .first .content-wrapper {
     position: relative;
     top: 10%;
@@ -67,20 +72,19 @@ a:hover {
     -moz-border-radius: 5px;
     border-radius: 5px;
     background: transparent; }
-  .first .title.name {
+  .first .name {
+    font-family: "kavoon", sans-serif;
     display: inline-block;
-    font-size: 50px;
+    font-size: 2.5vw;
     color: #f1ddbb;
     cursor: default; }
   .first .subtitle {
     cursor: default; }
-  .first .title-menu {
-    font-size: 30px;
+  .first .side-nav-a {
+    font-size: 2vw;
     color: #0b2c3c; }
 
 .second {
-  width: 55%;
-  float: left;
   font-family: lato, sans-serif;
   -webkit-transition: 0.2s;
   -moz-transition: 0.2s;
@@ -90,10 +94,10 @@ a:hover {
     position: relative; }
   .second .title {
     visibility: hidden;
-    font-size: 50px;
+    font-size: 40px;
     color: #bababa; }
   .second .content {
-    font-size: 30px;
+    font-size: 3vw;
     color: #0b2c3c;
     margin-left: 5%;
     cursor: default; }
@@ -112,11 +116,6 @@ a:hover {
     cursor: default; }
 
 .third {
-  width: 18%;
   height: 100%;
-  float: left;
+  min-height: 100%;
   background: #e74c3c; }
-
-.padLeft {
-  font-family: "kavoon", sans-serif;
-  padding-left: 50px; }
