--- a/public/stylesheets/css/main.css
+++ b/public/stylesheets/css/main.css
@@ -30,6 +30,9 @@ a:hover {
   border-radius: 5px;
   background: #0b2c3c; }
 
+.pill {
+  font-size: 20px; }
+
 @media screen and (min-width: 992px) {
   .row {
     height: 100%; } }
